[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/PlayerInterface/PlayerInterface.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/MultiplayerBattleInterface/MultiplayerBattleInterface.gd" type="Script" id=2]
[ext_resource path="res://Managers/MultiplayerBattle/MultiplayerBattleManager.tscn" type="PackedScene" id=3]

[node name="MultiplayerBattleInterface" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BattleEndDelayTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="PlayerInterface" parent="." instance=ExtResource( 1 )]

[node name="MultiplayerBattleManager" parent="." instance=ExtResource( 3 )]
[connection signal="card_forgotten" from="PlayerInterface" to="." method="_on_PlayerInterface_card_forgotten"]
[connection signal="card_inspected" from="PlayerInterface" to="." method="_on_PlayerInterface_card_inspected"]
[connection signal="card_played" from="PlayerInterface" to="." method="_on_PlayerInterface_card_played"]
[connection signal="card_played_on_opportunity" from="PlayerInterface" to="." method="_on_PlayerInterface_card_played_on_opportunity"]
[connection signal="discard_pile_pressed" from="PlayerInterface" to="." method="_on_PlayerInterface_discard_pile_pressed"]
[connection signal="draw_pile_pressed" from="PlayerInterface" to="." method="_on_PlayerInterface_draw_pile_pressed"]
[connection signal="ending_turn" from="PlayerInterface" to="." method="_on_PlayerInterface_ending_turn"]
[connection signal="exhaust_pile_pressed" from="PlayerInterface" to="." method="_on_PlayerInterface_exhaust_pile_pressed"]
[connection signal="status_forgotten" from="PlayerInterface" to="." method="_on_PlayerInterface_status_forgotten"]
[connection signal="status_inspected" from="PlayerInterface" to="." method="_on_PlayerInterface_status_inspected"]
[connection signal="before_hand_discarded" from="MultiplayerBattleManager" to="." method="_on_MultiplayerBattleManager_before_hand_discarded"]
[connection signal="before_hand_drawn" from="MultiplayerBattleManager" to="." method="_on_MultiplayerBattleManager_before_hand_drawn"]
